added customer class, controller and views

--- a/GeneralStore.MVC/Views/Product/Index.cshtml
+++ b/GeneralStore.MVC/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GeneralStore.MVC.Models.Products>
+﻿@model IEnumerable<GeneralStore.MVC.Models.Product>
 @{
     ViewBag.Title = "Index";
 }
