--- a/GeneralStore.MVC/Views/Home/Contact.cshtml
+++ b/GeneralStore.MVC/Views/Home/Contact.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Us";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    5002 N Meridian<br />
+    Indianapolis, IN 46205<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
