--- a/GeneralStore.MVC/Views/Home/Index.cshtml
+++ b/GeneralStore.MVC/Views/Home/Index.cshtml
@@ -3,29 +3,29 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>General Store</h1>
+    <p class="lead">Welcome to a learning experience. **WARNING** frustration is likely. Consider buying more patience...</p>
+    <p><a href="" class="btn btn-primary btn-lg">Patience now &raquo;</a></p>
+    @Html.ActionLink("Learn More About Us", "About")
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Your Products</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           Our General Store, located in Indianapolis, is your one stop shop for things nicotine, caffeinated, and you know...<br/>
+            Come browse our products for the best deals
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="">Add more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Product Details</h2>
+        <p>Let's see some more</p>
+        <p><a class="btn btn-default" href="">Get Details &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Remove Products</h2>
+        <p>You can easily remove here</p>
+        <p><a class="btn btn-default" href="">Delete a b &raquo;</a></p>
     </div>
 </div>
